--- a/doom/.doom.d/README.org
+++ b/doom/.doom.d/README.org
@@ -1,54 +1,69 @@
 #+title: DOOM EMACS LITERATE CONFIG
 #+author: s.takoor
 #+auto_tangle: t
-#+startup: showeverything
 #+filetags: :doom:emacs:config:org:
+#+startup: showeverything
 
 #+begin_quote
 A configuration without change is meaningless. By enduring thy tweaks and overcoming thy challenges, thou shalt obtain a powerful, unmatched setup.
 #+end_quote
 
-* TL;DR
+
+*  TL;DR
 This is my literate *DOOM EMACS* configuration, written in [[https://orgmode.org/][org]] format. The configuration contains the code blocks for the three main files: ~init.el~, ~config.el~, and ~packages.el~, required to configure ~Doom Emacs~, which is written in ~Emacs Lisp~. The function ~org-babel-tangle~ or the ~org-auto-tangle~ package can be used to extract the source code blocks from this file into their own source-specific files.
 
 ** TABLE OF CONTENTS :toc:quote:
 #+BEGIN_QUOTE
-- [[#tldr][TL;DR]]
-- [[#emacs-installation][EMACS INSTALLATION]]
+- [[#-tldr][ TL;DR]]
+- [[#-emacs-installation][󱌢 EMACS INSTALLATION]]
   - [[#prerequisites][PREREQUISITES]]
   - [[#dependencies][DEPENDENCIES]]
   - [[#emacs][EMACS]]
   - [[#doom-emacs][DOOM EMACS]]
   - [[#pro-tip][PRO TIP]]
-- [[#configel][CONFIG.EL]]
-  - [[#about][ABOUT]]
+- [[#-configel][ CONFIG.EL]]
+  - [[#whomai][WHOMAI]]
+  - [[#abbrev-mode][ABBREV MODE]]
   - [[#beacon-mode][BEACON MODE]]
+  - [[#backup][BACKUP]]
   - [[#centaur-tabs][CENTAUR-TABS]]
-  - [[#ellama][ELLAMA]]
+  - [[#completion][COMPLETION]]
+  - [[#denote][DENOTE]]
+  - [[#denote-extensions][DENOTE EXTENSIONS]]
+  - [[#history][HISTORY]]
   - [[#fonts][FONTS]]
+  - [[#frame-borders][FRAME BORDERS]]
   - [[#frame-opacity][FRAME OPACITY]]
   - [[#imenu-list][IMENU-LIST]]
   - [[#jinx][JINX]]
+  - [[#keybindings][KEYBINDINGS]]
+  - [[#llm][LLM]]
   - [[#line-numbers][LINE NUMBERS]]
   - [[#line-spacing][LINE SPACING]]
   - [[#minimal-ui][MINIMAL UI]]
   - [[#modeline][MODELINE]]
-  - [[#spacious-padding][SPACIOUS PADDING]]
   - [[#modus-theme][MODUS THEME]]
+  - [[#native-compilation][NATIVE-COMPILATION]]
+  - [[#spacious-padding][SPACIOUS PADDING]]
   - [[#org-auto-tangle][ORG-AUTO-TANGLE]]
   - [[#org-alert][ORG-ALERT]]
+  - [[#org-appear][ORG-APPEAR]]
   - [[#org-babel-configuration][ORG-BABEL CONFIGURATION]]
+  - [[#org-download][ORG-DOWNLOAD]]
   - [[#org-mode-configuration][ORG-MODE CONFIGURATION]]
   - [[#org-modern][ORG-MODERN]]
   - [[#org-latex][ORG-LATEX]]
   - [[#pdf-tools][PDF-TOOLS]]
   - [[#rainbow-mode][RAINBOW MODE]]
+  - [[#rainbow-delimiters][RAINBOW-DELIMITERS]]
+  - [[#recovery][RECOVERY]]
   - [[#rss][RSS]]
-- [[#initel][INIT.EL]]
-- [[#packagesel][PACKAGES.EL]]
+  - [[#terminal---shell][TERMINAL - SHELL]]
+- [[#-initel][󰜉 INIT.EL]]
+- [[#-packagesel][ PACKAGES.EL]]
 #+END_QUOTE
 
-* EMACS INSTALLATION
+* 󱌢 EMACS INSTALLATION
 There exists various options for installing ~Emacs~ on ~macOS~. Ensure a package manager is installed to facilitate this process. The following assumes the package manager is ~Homebrew~.
 
 ** PREREQUISITES
@@ -60,6 +75,7 @@ Before installing ~Doom Emacs~, ensure the following packages are installed:
 - fd (optional)
 
 ** DEPENDENCIES
+
 #+begin_src sh
 # required dedenpdencies
 brew install git ripgrep
@@ -94,12 +110,17 @@ I make use of the following keybindings to spun up ~emacsclient~ via the [[https
 shift + cmd - e : emacsclient -c -n -a ''
 #+end_src
 
-* CONFIG.EL
-** ABOUT
+*  CONFIG.EL
+** WHOMAI
 Some general info
 #+begin_src emacs-lisp :tangle "config.el"
 (setq user-full-name "s.t"
       user-mail-address "shashiduth.takoor@gmail.com")
+#+end_src
+
+** ABBREV MODE
+#+begin_src emacs-lisp :tangle "config.el"
+(setq-default abbrev-mode t)
 #+end_src
 
 ** BEACON MODE
@@ -107,9 +128,16 @@ Some general info
 (beacon-mode t)
 #+end_src
 
+** BACKUP
+#+begin_src emacs-lisp :tangle "config.el"
+(setq make-backup-files nil)
+(setq backup-inhibited nil)
+(setq create-lockfiles nil)
+#+end_src
+
 ** CENTAUR-TABS
 #+begin_src emacs-lisp :tangle "config.el"
-(setq centaur-tabs-default-font "JetBrainsMono NF" ;;Iosevka NF
+(setq centaur-tabs-default-font "JetBrainsMono NF" ;; or Iosevka NF
       centaur-tabs-set-bar 'right
       centaur-tabs-set-icons t
       centaur-tabs-gray-out-icons 'buffer
@@ -120,23 +148,65 @@ Some general info
       centaur-tabs-modified-marker "⨀")
 #+end_src
 
-** ELLAMA
-The ~Emacs Large LAnguage Model Assistant (ELLAMA)~ module is used for interacting with large language models from Emacs.
+** COMPLETION
 #+begin_src emacs-lisp :tangle "config.el"
-;; (require 'ellama)
-;; (add-hook 'ellama-mode-hook (lambda () (setopt ellama-language "English")))
-;; (require 'llm-ollama)
-;; (setq ellama-provider (make-llm-ollama :chat-model "gemma:2b" :embedding-model "gemma:2b"))
+(setq completion-styles '(basic flex)
+      completion-auto-select t
+      completion-auto-help 'visible
+      completions-format 'one-column
+      completions-sort 'historical
+      completions-max-height 20
+      completion-ignore-case t)
+#+end_src
+
+** DENOTE
+#+begin_src emacs-lisp :tangle "config.el"
+(use-package! denote
+  :after org
+  :config
+  (setq denote-directory (expand-file-name "~/Documents/notes/")
+        denote-known-keywords '("work" "personal" "ideas" "projects")
+        denote-file-type nil))
+#+end_src
+
+** DENOTE EXTENSIONS
+#+begin_src emacs-lisp :tangle "config.el"
+(use-package! consult-notes
+  :commands (consult-notes
+             consult-notes-search-in-all-notes))
+#+end_src
+
+** HISTORY
+#+begin_src emacs-lisp :tangle "config.el"
+(setq history-delete-duplicates t)
 #+end_src
 
 ** FONTS
 A ~nerd font~ with support for glyphs (icons).
 #+begin_src emacs-lisp :tangle "config.el"
-(setq doom-font (font-spec :family "JetBrainsMono NF" :size 12 :weight 'light)
+;; font rendering
+(setq ns-use-thin-smoothing t)
+
+(setq doom-font (font-spec :family "JetBrainsMono NF" :size 11 :weight 'light)
       doom-big-font (font-spec :family "JetBrainsMono NF" :size 12 :weight 'light)
-      doom-serif-font (font-spec :family "JetBrainsMono NF" :size 12 :weight 'light)
-      doom-symbol-font (font-spec :family "JetBrainsMono NF" :size 12 :weight 'light)
-      doom-variable-pitch-font (font-spec :family "JetBrainsMono NF" :size 12 :weight 'light))
+      doom-serif-font (font-spec :family "JetBrainsMono NF" :size 11 :weight 'light)
+      doom-symbol-font (font-spec :family "JetBrainsMono NF" :size 11 :weight 'light)
+      doom-variable-pitch-font (font-spec :family "JetBrainsMono NF" :size 11 :weight 'light))
+
+(setq doom-variable-pitch-font (font-spec :family "Iosevka Aile" :size 11 :weight 'light))
+#+end_src
+
+** FRAME BORDERS
+#+begin_src emacs-lisp :tangle "config.el"
+(modify-all-frames-parameters
+ '((right-divider-width . 40)
+   (internal-border-width . 40)))
+(dolist (face '(window-divider
+                window-divider-first-pixel
+                window-divider-last-pixel))
+  (face-spec-reset-face face)
+  (set-face-foreground face (face-attribute 'default :background)))
+(set-face-background 'fringe (face-attribute 'default :background))
 #+end_src
 
 ** FRAME OPACITY
@@ -154,10 +224,84 @@ A ~nerd font~ with support for glyphs (icons).
 ** JINX
 ~jinx~ is a fast just-in-time spell-checker for Emacs.
 #+begin_src emacs-lisp :tangle "config.el"
-(require 'jinx)
+(after! jinx
+  (global-jinx-mode))
+#+end_src
 
-;; Enable Jinx globally
-(add-hook 'emacs-startup-hook #'global-jinx-mode)
+** KEYBINDINGS
+#+begin_src emacs-lisp :tangle "config.el"
+(setq mac-command-modifier 'meta
+      mac-option-modifier 'none)
+#+end_src
+
+** LLM
+~gptel~ a simple Large Language Model(LLM) chat client for ~Emacs~; support for multiple models and backends; available at any time and uniformly in any buffer
+#+begin_src emacs-lisp :tangle "config.el"
+(use-package! gptel
+  :commands (gptel gptel-send)
+  :bind (("C-c C-<return>" . gptel-menu)
+         ("C-c <return>" . gptel-send)
+         :map gptel-mode-map
+         ("C-c C-x t" . gptel-set-topic))
+  :config
+  ;; ollama backend configuration
+  (defvar gptel--ollama
+    (gptel-make-ollama
+     "Ollama"
+     :host "localhost:11434"
+     :models '("mistral:latest" "zephyr:latest" "openhermes:latest")
+     :stream t))
+
+  ;; ollama backend with image support
+  (defvar gptel--ollama-vision
+    (gptel-make-ollama
+     "Ollama-Vision"
+     :host "localhost:11434"
+     :models '(mistral:latest zephyr:latest openhermes:latest
+               (llava:7b :description "Llava 1.6: Vision capable model"
+                :capabilities (images)
+                :mime-types ("image/jpeg" "image/png")))
+     :stream t))
+
+  ;; default settings
+  (setq-default gptel-backend gptel--ollama
+                gptel-model 'mistral:latest
+                gptel-default-mode 'org-mode)
+
+  ;; org mode integration
+  (setf (alist-get 'org-mode gptel-prompt-prefix-alist) "*Prompt*: "
+        (alist-get 'org-mode gptel-response-prefix-alist) "*Response*:\n"
+        (alist-get 'markdown-mode gptel-prompt-prefix-alist) "#### ")
+
+  ;; eshell integration
+  (defun my/gptel-eshell-send (&optional arg)
+    (interactive "P")
+    (if (use-region-p)
+        (gptel-send arg)
+      (push-mark)
+      (or (eshell-previous-prompt 0)
+          (eshell-previous-prompt 1))
+      (activate-mark)
+      (gptel-send arg)
+      (exchange-point-and-mark)
+      (deactivate-mark)))
+
+  (defun my/gptel-eshell-keys ()
+    (define-key eshell-mode-map (kbd "C-c <return>") #'my/gptel-eshell-send))
+
+  (add-hook 'eshell-mode-hook 'my/gptel-eshell-keys))
+
+(use-package! gptel-ask
+  :after gptel
+  :bind (:map help-map
+              ("C-q" . gptel-ask))
+  :config
+  (setq gptel-ask-default-backend gptel--ollama))
+
+(use-package! gptel-quick
+  :after gptel
+  :bind (:map embark-general-map
+              ("?" . gptel-quick)))
 #+end_src
 
 ** LINE NUMBERS
@@ -167,73 +311,92 @@ A ~nerd font~ with support for glyphs (icons).
 
 ** LINE SPACING
 #+begin_src emacs-lisp :tangle "config.el"
-(setq-default line-spacing 0)
+(setq-default line-spacing 0.2)
 #+end_src
 
 ** MINIMAL UI
 #+begin_src emacs-lisp :tangle "config.el"
+(setq-default inhibit-startup-message t
+              use-short-answers t)
 (menu-bar-mode -1)
-(tool-bar-mode -1)
 (scroll-bar-mode -1)
 (show-paren-mode 1)
+(tool-bar-mode -1)
 (add-to-list 'default-frame-alist '(undecorated-round . t))
+
+;; turn on pixel scrolling
+(pixel-scroll-precision-mode t)
 #+end_src
 
 ** MODELINE
 #+begin_src emacs-lisp :tangle "config.el"
-(require 'doom-modeline)
-
-(setq doom-modeline-enable-word-count t
-      doom-modeline-battery t
-      doom-modeline-icon t
-      doom-modeline-time t
-      doom-modeline-time-icon t
-      doom-modeline-lsp t)
-#+end_src
-
-** SPACIOUS PADDING
-#+begin_src emacs-lisp :tangle "config.el"
-;; (require 'spacious-padding)
-
-
-(setq spacious-padding-widths
-      '( :internal-border-width 15
-         :header-line-width 4
-         :mode-line-width 6
-         :tab-width 4
-         :right-divider-width 1
-         :scroll-bar-width 8
-         :left-fringe-width 20
-         :right-fringe-width 20))
-
-(setq spacious-padding-subtle-mode-line
-      `( :mode-line-active 'default
-         :mode-line-inactive vertical-border))
-
-;; Enable spacious-padding mode
-(spacious-padding-mode 1)
+(use-package! doom-modeline
+  :ensure t
+  :config
+  (setq doom-modeline-enable-word-count t
+        doom-modeline-battery t
+        doom-modeline-env-version t
+        doom-modeline-icon t
+        doom-modeline-major-mode-icon t
+        doom-modeline-major-mode-color-icon t
+        doom-modeline-buffer-state-icon t
+        doom-modeline-buffer-modification-icon t
+        doom-modeline-time t
+        doom-modeline-time-icon t
+        doom-modeline-time-live-icon t
+        doom-modeline-lsp t)
+  :init (doom-modeline-mode 1))
 #+end_src
 
 ** MODUS THEME
 #+begin_src emacs-lisp :tangle "config.el"
-(require 'modus-themes)
+(use-package! modus-themes
+  :config
+  (setq modus-themes-variable-pitch-ui t
+        modus-themes-bold-constructs t
+        modus-themes-italic-constructs t
+        modus-themes-mixed-fonts t
+        modus-themes-prompts '(italic bold)
+        modus-themes-completions '((matches . (extrabold underline))
+                                   (selection . (semibold italic text-also underline)))
+        modus-themes-org-blocks 'gray-background
+        modus-themes-headings '((1 . (variable-pitch 1.5))
+                                (2 . (1.3))
+                                (agenda-date . (1.3))
+                                (agenda-structure . (variable-pitch light 2.2))
+                                (t . (1.15))))
 
-(custom-set-variables
- '(modus-themes-variable-pitch-ui t)
- '(modus-themes-bold-constructs t)
- '(modus-themes-italic-constructs t)
- '(modus-themes-mixed-fonts t)
- '(modus-themes-prompts '(italic bold))
- '(modus-themes-completions '((matches . (extrabold underline))
-                              (selection . (semibold italic text-also underline))))
- '(modus-themes-org-blocks 'gray-background)
- '(modus-themes-headings
-   '((1 . (variable-pitch 1.5))
-     (2 . (1.3))
-     (agenda-date . (1.3))
-     (agenda-structure . (variable-pitch light 2.2))
-     (t . (1.15))))) ;; Default size for other headings
-(load-theme 'modus-vivendi-tritanopia t)
+  ;; set the default theme
+  (setq doom-theme 'modus-vivendi-tritanopia))
+#+end_src
+
+** NATIVE-COMPILATION
+make native compilation silent and prune its cache
+#+begin_src emacs-lisp :tangle "config.el"
+(when (native-comp-available-p)
+  (setq native-comp-async-report-warnings-errors 'silent)
+  (setq native-compile-prune-cache t))
+#+end_src
+
+** SPACIOUS PADDING
+#+begin_src emacs-lisp :tangle "config.el"
+(use-package! spacious-padding
+  :config
+  (setq spacious-padding-widths
+        '(:internal-border-width 15
+          :header-line-width 4
+          :mode-line-width 6
+          :tab-width 4
+          :right-divider-width 1
+          :scroll-bar-width 8
+          :left-fringe-width 20
+          :right-fringe-width 20))
+
+  (setq spacious-padding-subtle-mode-line
+        '(:mode-line-active 'default
+          :mode-line-inactive vertical-border))
+
+  (spacious-padding-mode 1))
 #+end_src
 
 ** ORG-AUTO-TANGLE
@@ -241,21 +404,32 @@ The ~org-auto-tangle~ package automatically tangle org files on save. This is ac
 
 The tangling process happens asynchronously, therefore it will not block the current emacs session.
 #+begin_src emacs-lisp :tangle "config.el"
-(require 'org-auto-tangle)
-(add-hook 'org-mode-hook #'org-auto-tangle-mode)
-(setq org-auto-tangle-default t)
+(use-package! org-auto-tangle
+  :defer t
+  :hook (org-mode . org-auto-tangle-mode)
+  :config
+  (setq org-auto-tangle-default t))
 #+end_src
 
 ** ORG-ALERT
 #+begin_src emacs-lisp :tangle "config.el"
-(require 'org-alert)
-(setq org-alert-interval 1200
-      org-alert-notify-cutoff 10
-      org-alert-notify-after-event-cutoff 10
-      org-alert-notification-title "Org Alert Reminder!")
+(use-package! org-alert
+  :config
+  (setq org-alert-interval 1200
+        org-alert-notify-cutoff 10
+        org-alert-notify-after-event-cutoff 10
+        org-alert-notification-title "Org Alert Reminder!"))
 
-(require 'alert)
-(setq alert-default-style 'osx-notifier)
+(use-package! alert
+  :config
+  (setq alert-default-style 'osx-notifier))
+#+end_src
+
+** ORG-APPEAR
+#+begin_src emacs-lisp :tangle "config.el"
+(use-package! org-appear
+  :hook
+  (org-mode . org-appear-mode))
 #+end_src
 
 ** ORG-BABEL CONFIGURATION
@@ -267,6 +441,17 @@ The tangling process happens asynchronously, therefore it will not block the cur
 (setq org-ditaa-jar-path "/opt/homebrew/Cellar/ditaa/0.11.0_1/libexec/ditaa-0.11.0-standalone.jar")
 #+end_src
 
+** ORG-DOWNLOAD
+#+begin_src emacs-lisp :tangle "config.el"
+;; org-download for image handling
+(use-package! org-download
+  :after org
+  :config
+  (setq org-download-method 'attach
+        org-download-image-dir "~/Pictures/org-images"
+        org-download-screenshot-method "screencapture -i %s"))
+#+end_src
+
 ** ORG-MODE CONFIGURATION
 #+begin_src emacs-lisp :tangle "config.el"
 (setq org-directory "~/Documents/orgfiles/"
@@ -275,21 +460,29 @@ The tangling process happens asynchronously, therefore it will not block the cur
       org-fold-catch-invisible-edits 'show-and-error
       org-special-ctrl-a/e t
       org-insert-heading-respect-content t
-      org-export-headline-levels 5
       org-log-done 'time
       org-log-into-drawer t
       org-edit-src-content-indentation 0
 
-      ;; Org styling, hide markup, etc.
+      org-export-with-broken-links t
+      org-export-with-drawers nil
+      org-export-with-todo-keywords nil
+      org-export-with-toc t
+      org-export-headline-levels 8
+      org-export-with-smart-quotes t
+
+      ;; styling, hide markup, etc.
+      org-ellipsis "..."
       org-hide-emphasis-markers t
-      org-pretty-entities t
-      org-ellipsis " ▼"
       org-hide-leading-stars t
+      org-pretty-entities t
       org-src-preserve-indentation nil
       org-src-tab-acts-natively t
       org-startup-indented nil
+      org-startup-with-inline-images t
+      org-image-actual-width '(300)
 
-      ;; Agenda styling
+      ;; agenda configuration
       org-agenda-window-setup 'current-window
       org-agenda-files '("~/Documents/orgfiles/agenda.org")
       org-agenda-tags-column 0
@@ -303,31 +496,35 @@ The tangling process happens asynchronously, therefore it will not block the cur
 #+end_src
 
 ** ORG-MODERN
-The ~org modern~ package implements a modern style for Org buffers using font locking and text properties. The package styles headlines, keywords, tables and source blocks. 
+The ~org modern~ package implements a modern style for Org buffers using font locking and text properties. The package styles headlines, keywords, tables and source blocks.
 #+begin_src emacs-lisp :tangle "config.el"
-(require 'org-modern)
-
-;; Customize org-modern settings
-(setq org-modern-star '("◉" "○" "✸" "✿" "✤" "✜" "◆" "▶")
-      org-modern-table-vertical 1
-      org-modern-table-horizontal 0.2
-      org-modern-horizontal-rule t)
-
-;; Enable global-org-modern-mode
-(global-org-modern-mode)
+(use-package! org-modern
+  :hook ((org-mode . global-org-modern-mode)
+         (org-agenda-finalize . org-modern-agenda))
+  :config
+  (setq org-modern-star '("◉" "○" "✸" "✿" "✤" "✙" "♱" "♰" "☥" "✞")
+        org-modern-table-vertical 1
+        org-modern-table-horizontal 0.2
+        org-modern-horizontal-rule t
+        org-modern-block t
+        org-modern-block-name t
+        org-modern-keyword t
+        org-modern-todo t
+        org-modern-priority t
+        org-modern-tag t
+        org-modern-statistics t
+        org-modern-progress t
+        org-modern-label-border 0.3
+        org-modern-variable-pitch nil)
+  (global-org-modern-mode))
 #+end_src
 
 ** ORG-LATEX
 #+begin_src emacs-lisp :tangle "config.el"
-(require 'ox-latex)
-
-;; Set LaTeX compiler to XeLaTeX
-(add-hook! 'latex-mode-hook
-  (setq TeX-engine 'xelatex) 99)
-
-;;(setq org-latex-pdf-process (list "latexmk -pdflatex='xelatex -shell-escape -interaction nonstopmode' -pdf -output-directory=%o %f"))
-
-(with-eval-after-load 'ox-latex
+(after! ox-latex
+  (setq org-latex-compiler "xelatex"
+        org-latex-pdf-process
+        '("latexmk -pdflatex='xelatex -shell-escape -interaction nonstopmode' -pdf -output-directory=%o %f"))
   (add-to-list 'org-latex-classes
                '("article"
                  "\\documentclass[letterpaper]{article}"
@@ -335,44 +532,67 @@ The ~org modern~ package implements a modern style for Org buffers using font lo
                  ("\\subsection{%s}" . "\\subsection*{%s}")
                  ("\\subsubsection{%s}" . "\\subsubsection*{%s}")
                  ("\\paragraph{%s}" . "\\paragraph*{%s}")
-                 ("\\subparagraph{%s}" . "\\subparagraph*{%s}")
-                 )))
-
-(require 'engrave-faces-latex)
-(setq org-latex-src-block-backend'engraved)
+  (require 'engrave-faces-latex)
+  (setq org-latex-src-block-backend 'engraved))
 #+end_src
 
 ** PDF-TOOLS
 #+begin_src emacs-lisp :tangle "config.el"
-(require 'pdf-tools)
-
-(add-hook 'doc-view-mode-hook 'pdf-tools-install)
-
-(setq-default pdf-view-use-scaling t
-              pdf-view-use-imagemagick nil)
+(use-package! pdf-tools
+  :config
+  (pdf-tools-install)
+  (setq-default pdf-view-use-scaling t
+                pdf-view-use-imagemagick nil))
 #+end_src
 
 ** RAINBOW MODE
+colorize color names and ~parens~ in buffers
 #+begin_src emacs-lisp :tangle "config.el"
-(add-hook 'prog-mode-hook #'rainbow-delimiters-mode)
+(use-package rainbow-mode
+  :commands rainbow-mode
+  :ensure t)
+#+end_src
+
+** RAINBOW-DELIMITERS
+#+begin_src emacs-lisp :tangle "config.el"
+(use-package rainbow-delimiters
+  :commands rainbow-delimiters-mode
+  :ensure t)
+#+end_src
+
+** RECOVERY
+#+begin_src emacs-lisp :tangle "config.el"
+(setq auto-save-default t
+      auto-save-timeout 20)
 #+end_src
 
 ** RSS
 The ~elfeed~ module is an RSS reader for ~Emacs~. The ~+org~ module flag in my ~init.el~ allows the use of ~org-mode~ to manage RSS feeds. I've added an example of my ~elfeed.org~ file which can be found [[https://github.com/s-takoor/emacs-org-docs/tree/main/rss][here]]. This file is located in my ~{org-directory}/elfeed.org~.
 #+begin_src emacs-lisp :tangle "config.el"
-(require 'elfeed-goodies)
+(use-package! elfeed
+  :config
+  (setq elfeed-search-filter "@2-weeks-ago")
+  (add-hook! 'elfeed-search-mode-hook #'elfeed-update)
+  (global-set-key (kbd "C-x w") #'elfeed))
 
-;; News filtering
-(after! elfeed
-  (setq elfeed-search-filter "@2-weeks-ago"))
-
-;; Automatically updating feed when opening elfeed
-(add-hook! 'elfeed-search-mode-hook #'elfeed-update)
-
-(global-set-key (kbd "C-x w") 'elfeed)
+(use-package! elfeed-goodies
+  :after elfeed
+  :config
+  (elfeed-goodies/setup))
 #+end_src
 
-* INIT.EL
+** TERMINAL - SHELL
+#+begin_src emacs-lisp :tangle "config.el"
+;; use bash for processes that require a POSIX shell
+(setq shell-file-name (executable-find "bash")
+      explicit-shell-file-name (executable-find "bash"))
+
+;; use fish while keeping bash as the default shell for other Emacs processes
+(setq-default vterm-shell (executable-find "fish")
+              explicit-shell-file-name (executable-find "fish"))
+#+end_src
+
+* 󰜉 INIT.EL
 The ~init.el~ file controls what ~Doom~ modules are enabled and what order they load in. Remember to run ~doom sync~ after modifying it!
 
 #+begin_quote
@@ -392,18 +612,18 @@ Alternatively, press ~gd~ (or ~C-c c d~) on a module to browse its directory (fo
 
        :completion
        ;;company           ; the ultimate code completion backend
-       (corfu +orderless +dabbrev)               ; complete with cap(f), cape and a flying feather!
+       (corfu +orderless +icons +dabbrev)               ; complete with cap(f), cape and a flying feather!
        ;;helm              ; the *other* search engine for love and life
        ;;ido               ; the other *other* search engine...
        ;;ivy               ; a search engine for love and life
-       (vertico +childframe +icons)           ; the search engine of the future
+       (vertico +orderless +childframe +icons)           ; the search engine of the future
 
        :ui
        ;;deft              ; notational velocity for Emacs
        doom              ; what makes DOOM look the way it does
        doom-dashboard    ; a nifty splash screen for Emacs
        ;;doom-quit         ; DOOM quit-message prompts when you quit Emacs
-       (emoji +unicode)  ; 🙂
+       (emoji +ascii +github +unicode)  ; 🙂
        hl-todo           ; highlight TODO/FIXME/NOTE/DEPRECATED/HACK/REVIEW
        ;;hydra
        ;;indent-guides     ; highlighted indent columns
@@ -413,11 +633,11 @@ Alternatively, press ~gd~ (or ~C-c c d~) on a module to browse its directory (fo
        ;;nav-flash         ; blink cursor line after big motions
        ;;neotree           ; a project drawer, like NERDTree for vim
        ophints           ; highlight the region an operation acts on
-       (popup +defaults)   ; tame sudden yet inevitable temporary windows
+       (popup +all +defaults)   ; tame sudden yet inevitable temporary windows
        tabs              ; a tab bar for Emacs
        treemacs          ; a project drawer, like neotree but cooler
        unicode           ; extended unicode support for various languages
-       (vc-gutter +pretty) ; vcs diff in the fringe
+       (vc-gutter +pretty +diff-hl) ; vcs diff in the fringe
        vi-tilde-fringe   ; fringe tildes to mark beyond EOB
        ;;window-select     ; visually switch windows
        workspaces        ; tab emulation, persistence & separate workspaces
@@ -427,7 +647,7 @@ Alternatively, press ~gd~ (or ~C-c c d~) on a module to browse its directory (fo
        (evil +everywhere); come to the dark side, we have cookies
        file-templates    ; auto-snippets for empty files
        fold              ; (nigh) universal code folding
-       (format +lsp +onsave)  ; automated prettiness
+       (format +onsave +lsp)  ; automated prettiness
        ;;god               ; run Emacs commands without modifier keys
        ;;lispy             ; vim for lisp, for people who don't like vim
        ;;multiple-cursors  ; editing in many places at once
@@ -441,7 +661,7 @@ Alternatively, press ~gd~ (or ~C-c c d~) on a module to browse its directory (fo
        (dired +icons)             ; making dired pretty [functional]
        electric          ; smarter, keyword-based electric-indent
        (ibuffer +icons)         ; interactive buffer management
-       undo              ; persistent, smarter undo for your inevitable mistakes
+       (undo +tree)              ; persistent, smarter undo for your inevitable mistakes
        vc                ; version-control and Emacs, sitting in a tree
 
        :term
@@ -460,7 +680,7 @@ Alternatively, press ~gd~ (or ~C-c c d~) on a module to browse its directory (fo
        ;;biblio            ; Writes a PhD for you (citation needed)
        ;;collab            ; buffers with friends
        ;;debugger          ; FIXME stepping through code, to help you add bugs
-       ;;direnv              ; be direct about your environment
+       direnv              ; be direct about your environment
        ;;docker              ; port everything to containers
        ;;editorconfig      ; let someone else argue about tabs vs spaces
        ;;ein               ; tame Jupyter notebooks with emacs
@@ -566,7 +786,7 @@ Alternatively, press ~gd~ (or ~C-c c d~) on a module to browse its directory (fo
        (default +bindings +smartparens))
 #+end_src
 
-* PACKAGES.EL
+*  PACKAGES.EL
 The ~package.el~ file lists all packages to be installed with ~Doom Emacs~. Each line specifies the name of a package and any additional configuration options. After declaring the package name in the ~packages.el~ file, you will have to run ~doom sync~ on the command line or ~SPC h r r~, then restart ~Emacs~ for the changes to take effect -- or use ~M-x doom/reload~.
 
 To install SOME-PACKAGE from MELPA, ELPA or emacsmirror:
@@ -604,15 +824,17 @@ Doom's packages are pinned to a specific commit and updated from release to rele
 
 #+begin_src emacs-lisp :tangle "packages.el"
 (package! beacon)
+(package! denote)
 (package! elfeed-goodies)
-;; (package! ellama)
 (package! engrave-faces)
-(package! fish-mode)
+(package! gptel)
 (package! imenu-list)
 (package! jinx)
 (package! modus-themes)
 (package! org-alert)
+(package! org-appear)
 (package! org-auto-tangle)
+(package! org-download)
 (package! org-modern)
 (package! ns-auto-titlebar)
 (package! osx-dictionary)
